# SnippetUSD

./: CMakeLists.txt  README.md  vcpkg.json
pxr/: CMakeLists.txt
pxr/base/arch/: CMakeLists.txt  testArchAbi.cpp  testArchAbi.h  testArchAbiPlugin.cpp  testArchPRead.cpp  testAttributes.cpp
pxr/imaging/: CMakeLists.txt
pxr/imaging/cameraUtil/: CMakeLists.txt  testCameraUtil.cpp
pxr/imaging/geomUtil/: CMakeLists.txt  testMeshGenerators.cpp
pxr/imaging/hd/: CMakeLists.txt  testHdBufferSourceEmptyVal.cpp  testHdBufferSpec.cpp  testHdCollectionExpressionEvaluator.cpp  testHdCommand.cpp  testHdContainerDataSourceUtils.cpp  testHdDataSource.cpp  testHdDataSourceLocator.cpp  testHdDirtyBitsTranslator.cpp  testHdDirtyList.cpp  testHdExtCompDependencySort.cpp  testHdExtComputationUtils.cpp  testHdMergingSceneIndex.cpp  testHdPerfLog.cpp  testHdSceneIndex.cpp  testHdSortedIds.cpp  testHdSortedIdsPerf.cpp  testHdTimeSampleArray.cpp  testHdTypes.cpp  testHdUtils.cpp
pxr/imaging/hdSt/: CMakeLists.txt  materialNetworkShader.h  unitTestHelper.h
pxr/imaging/hdsi/: CMakeLists.txt  testHdsiComputeSceneIndexDiff.cpp  testHdsiPinnedCurveExpandingSceneIndex.cpp  testHdsiSwitchingSceneIndex.cpp
pxr/imaging/hdx/: CMakeLists.txt  testGLContext.cpp  testGLContext.h  testHdxCameraAndLight.cpp  unitTestDelegate.h
pxr/usd/: CMakeLists.txt
pxr/usd/ar/: CMakeLists.txt
pxr/usd/ar/testArURIResolver/: CMakeLists.txt  TestArURIResolver_plugin.cpp  TestArURIResolver_plugin.h  plugInfo.json  testArURIResolver.cpp
pxr/usd/usd/: CMakeLists.txt  (+1 more)
pxr/usdImaging/: CMakeLists.txt
(+17 files in other folders)
