#  Copyright (c) 2024 Feng Yang
#
#  I am making my contributions/submissions to this project solely in my
#  personal capacity and am not conveying any rights to any intellectual
#  property of any third parties.

cmake_minimum_required(VERSION 3.10)
project(testArURIResolver)

add_executable(${PROJECT_NAME}
        testArURIResolver.cpp
        TestArURIResolver_plugin.cpp
)

target_link_libraries(${PROJECT_NAME}
        ${PXR_LIBRARY_NAMES}
)